@@ -6,6 +6,7 @@ import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 import ru.mail.park.mechanics.GameSession;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.TreeMap;
@@ -78,7 +79,7 @@ public class GameTaskScheduler {
         final List<ScheduledTask> tasks;
 
         private ScheduledTaskList(@NotNull ScheduledTask... tasks) {
-            this.tasks = List.of(tasks);
+            this.tasks = Arrays.asList(tasks);
         }
 
         private ScheduledTaskList(@NotNull ScheduledTaskList task) {
